Stop Watch initial files

--- a/StopWatch/Base.lproj/Main.storyboard
+++ b/StopWatch/Base.lproj/Main.storyboard
@@ -1,25 +1,90 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9052" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9040"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="StopWatch" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="WoW-Ln-rn1">
+                                <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="l8p-Lx-2A5"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Title" id="KUB-ya-Rr4">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="stop" id="9g7-gf-tDy">
+                                            <connections>
+                                                <action selector="stopAction:" destination="BYZ-38-t0r" id="ECe-sB-Oas"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="refresh" id="bxs-l5-Mi1">
+                                            <connections>
+                                                <action selector="refresh:" destination="BYZ-38-t0r" id="tdb-1u-qDX"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QpN-HN-0rN">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <animations/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="0rF-gD-ulS"/>
+                                </constraints>
+                                <items>
+                                    <barButtonItem systemItem="play" id="W5R-Rk-hLT">
+                                        <connections>
+                                            <action selector="playAction:" destination="BYZ-38-t0r" id="qoA-57-lSs"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="x3f-4A-mmt"/>
+                                    <barButtonItem systemItem="pause" id="17D-wO-zob">
+                                        <connections>
+                                            <action selector="pauseAction:" destination="BYZ-38-t0r" id="t6L-Ie-Y8B"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L10-a1-jIn">
+                                <rect key="frame" x="54" y="234" width="267" height="134"/>
+                                <animations/>
+                                <fontDescription key="fontDescription" type="system" pointSize="112"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <animations/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="QpN-HN-0rN" secondAttribute="trailing" constant="-20" id="62c-kY-5FZ"/>
+                            <constraint firstItem="WoW-Ln-rn1" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" id="FvE-pN-sao"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="WoW-Ln-rn1" secondAttribute="trailing" constant="-20" id="Q7O-nc-GEz"/>
+                            <constraint firstItem="QpN-HN-0rN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="rah-x2-Tc4"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="QpN-HN-0rN" secondAttribute="bottom" id="x2T-7Q-MjI"/>
+                            <constraint firstItem="WoW-Ln-rn1" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="yZT-SB-bFf"/>
+                        </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="timerLabel" destination="L10-a1-jIn" id="fba-fD-Amd"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="564.5" y="548.5"/>
         </scene>
     </scenes>
 </document>
